--- a/index.html
+++ b/index.html
@@ -13,13 +13,27 @@
 
 <body>
     <div id="json-obj">
-        <p class="content">json obj shows here</p>
+        <p class="joke">Jokes Show Here</p>
     </div>
 
     <div class="user-interact">
         <label>Number of Jokes: </label>
-        <input class="input-box" type="number">
-        <button id="get-joke-btn">get joke</button>
+        <input class="number-input-box" type="number">
+        <button id="get-joke-btn">Get Jokes</button>
+    </div>
+
+    <div class="optional">
+        <span>If you don't like Chuck Norris, you can change it. (Optional)</span>
+
+        <div class="input-field">
+            <div class="name-input-field">
+                <label>First Name: </label><input id="firstName" class="text-input-box" type="text">
+            </div>
+
+            <div class="name-input-field">
+                <label>Last Name: </label><input id="lastName" class="text-input-box" type="text">
+            </div>
+        </div>
     </div>
 </body>
 
