--- a/index.html
+++ b/index.html
@@ -12,29 +12,36 @@
 </head>
 
 <body>
-    <div id="json-obj">
-        <p class="joke">Jokes Show Here</p>
-    </div>
-
     <div class="user-interact">
-        <label>Number of Jokes: </label>
-        <input class="number-input-box" type="number">
-        <button id="get-joke-btn">Get Jokes</button>
-    </div>
+        <div class="main-interact-field">
+            <label>Number of Jokes: </label>
+            <input class="number-input-box" type="number">
+            <button id="get-joke-btn">Get Jokes</button>
+        </div>
 
-    <div class="optional">
-        <span>If you don't like Chuck Norris, you can change it. (Optional)</span>
+        <div class="optional">
+            <span>If you don't like Chuck Norris, you can change it. (Optional)</span>
 
-        <div class="input-field">
-            <div class="name-input-field">
-                <label>First Name: </label><input id="firstName" class="text-input-box" type="text">
-            </div>
+            <div class="input-field">
+                <div class="name-input-field">
+                    <label>First Name: </label><input id="firstName" class="text-input-box" type="text">
+                </div>
 
-            <div class="name-input-field">
-                <label>Last Name: </label><input id="lastName" class="text-input-box" type="text">
+                <div class="name-input-field">
+                    <label>Last Name: </label><input id="lastName" class="text-input-box" type="text">
+                </div>
             </div>
         </div>
+        <h1>Get Your Jokes</h1>
     </div>
+
+    <div class="result-field">
+        <ol id="json-obj">
+            <span class="temp">Jokes Show Here</span>
+        </ol>
+    </div>
+
+
 </body>
 
 </html>
