loader and error handler added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="result-field">
         <ol id="json-obj">
-            <span class="temp">Jokes Show Here</span>
+            <span class="temp">Jokes Show Here.</span>
         </ol>
     </div>
 
