--- a/index.html
+++ b/index.html
@@ -15,21 +15,17 @@
     <div class="user-interact">
         <div class="main-interact-field">
             <label>Number of Jokes: </label>
-            <input class="number-input-box" type="number">
+            <input class="number-input-box" type="number" min="1" step="1" required autofocus>
             <button id="get-joke-btn">Get Jokes</button>
         </div>
 
         <div class="optional">
             <span>If you don't like Chuck Norris, you can change it. (Optional)</span>
 
-            <div class="input-field">
-                <div class="name-input-field">
-                    <label>First Name: </label><input id="firstName" class="text-input-box" type="text">
-                </div>
-
-                <div class="name-input-field">
-                    <label>Last Name: </label><input id="lastName" class="text-input-box" type="text">
-                </div>
+            <div class="name-input-field">
+                <label>Name:</label>
+                <input id="firstName" class="text-input-box" type="text" placeholder="First Name">
+                <input id="lastName" class="text-input-box" type="text" placeholder="Last Name">
             </div>
         </div>
         <h1>Get Your Jokes</h1>
